--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+        compile 'com.google.code.gson:gson:2.8.2'
         
     }
 }
